<resources>
    <string name="app_name">Agenda</string>
    <string name="titulo">Agenda</string>
    <string name="insertar">Insertar Datos</string>
    <string name="modificar">Modificar Datos/ Llamar</string>
    <string name="nombre">*Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">*Telefono</string>
    <string name="fechanacimiento">Fecha nacimiento</string>
    <string name="correo">Correo electronico</string>
    <string name="botonañadir">Añadir</string>
    <string name="botoncancelar">Cancelar</string>
    <string name="botonmodificar">Modificar</string>
    <string name="botonfoto">Tomar foto</string>
    <string name="envcorr">Correo</string>

</resources>