<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivityinsertar"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/cabecera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar"
        android:textColor="@color/purple_700"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        >

    </TextView>


    <ImageView
        android:id="@+id/imgfavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/baseline_favorite_24"
        android:visibility="visible"
        >
    </ImageView>

    <ImageView
        android:id="@+id/imgfavoritoactivado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#DC0E0E"
        android:visibility="invisible"
        app:srcCompat="@drawable/baseline_favorite_24"></ImageView>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20dp"
            android:textStyle="bold"
            >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="400dp"
            >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellidos"
            android:textSize="20dp"
            android:textStyle="bold"
            >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtapellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="400dp"
            >

        </EditText>
    </LinearLayout>






    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textSize="20dp"
            android:textStyle="bold"
            >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtdireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="400dp"
            >

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="20dp"
            android:textStyle="bold"
            >
        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txttelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="400dp"
            >
        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechanacimiento"
            android:textSize="20dp"
            android:textStyle="bold"
            >
        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtfechanacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="400dp"
            >
        </EditText>
    </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnmodificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonmodificar"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:backgroundTint="@color/purple_700"
            android:layout_gravity="center_horizontal">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btncancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botoncancelar"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:backgroundTint="@color/purple_700"
            android:layout_gravity="center_horizontal">

        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnllamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="46dp"
        android:src="@drawable/telefonomas"
        app:backgroundTint="#4CAF50"
        android:layout_gravity="bottom|center"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnwass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_favorite_24"
        app:backgroundTint="#FFEB3B"
        android:layout_gravity="bottom|center"/>






</LinearLayout>